--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ionic/storage": "2.1.3",
     "fs": "0.0.1-security",
     "hoek": "^4.2.1",
+    "image-size": "^0.6.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
