--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ dist/mac/dataset-annotator.app/Contents/Resources/electron.icns
 /resources/jbootx-1.1.0-release/
 /resources/SceneBuilder-10.0.0.dmg
 /resources/jbootx-1.1.0-release.zip
+/dist/
