--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic-native/splash-screen": "4.8.0",
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/storage": "2.1.3",
+    "angular2-hotkeys": "^2.1.2",
     "fs": "0.0.1-security",
     "hoek": "^4.2.1",
     "image-size": "^0.6.3",
