--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ionic-app-scripts serve",
     "electron dist": "electron .",
     "ebuild": "npm run build && node_modules/.bin/build",
+    "ebuild_windows": "npm run build && start node_modules/.bin/build.cmd",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
