--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ebuild": "npm run build && node_modules/.bin/build",
     "ebuild_windows": "npm run build && start node_modules/.bin/build.cmd",
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
+    "build": "ionic-app-scripts build -p always",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
@@ -19,6 +19,13 @@
     "appId": "com.lohanitech.ionic-electron-test",
     "electronVersion": "1.7.5",
     "asar": false,
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "omenyayl",
+        "repo": "dataset-annotator"
+      }
+    ],
     "files": [
       "www/**/*",
       "electron/*"
@@ -44,6 +51,7 @@
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/storage": "2.1.3",
     "angular2-hotkeys": "^2.1.2",
+    "electron-updater": "^2.23.3",
     "fs": "0.0.1-security",
     "hoek": "^4.2.1",
     "image-size": "^0.6.3",
