--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ionic-native/status-bar": "4.8.0",
     "@ionic/storage": "2.1.3",
     "angular2-hotkeys": "^2.1.2",
+    "cryptiles": "^4.1.2",
     "electron-updater": "^2.23.3",
     "fs": "0.0.1-security",
     "hoek": "^4.2.1",
